<?xml version="1.0" encoding="UTF-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/exit_layout"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/login_edit_pressed" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="5dp"
            android:textColor="@color/bg_tab_main_up_title"
            android:textSize="20sp"
            android:text="@string/str_exit_vyangyang" />
        <View 
              android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_btn_pressed"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_gray"
            android:layout_marginTop="1dp"
            android:padding="10dp"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:text="@string/str_exit_tips" /> 
        

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"           
            android:layout_marginTop="33dp"
            android:layout_marginBottom="8dp"
             >
            
            <Button
              android:id="@+id/exitBtn0"
              android:layout_width="110dp"
              android:layout_height="45dp"
              android:text="@string/str_yes"
              android:textSize="16sp"
              android:textColor="@color/white"
              android:background="@drawable/btn_style"
              android:gravity="center"
			  android:onClick="btnExitYes"
              />
          
            <Button
              android:id="@+id/exitBtn1"
              android:layout_width="110dp"
              android:layout_height="45dp"
              android:layout_marginLeft="10dp"
              android:text="@string/str_no"
              android:textSize="16sp"
              android:textColor="@color/white"
              android:background="@drawable/btn_style"
              android:gravity="center"
			  android:onClick="btnExitNo"
              />
        </LinearLayout>

    </LinearLayout>
