<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/exit_layout"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@drawable/login_edit_pressed"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:padding="5dp"
            android:text="@string/str_confirm_vorder_distr"
            android:textColor="@color/bg_tab_main_up_title"
            android:textSize="20sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/bg_btn_pressed" />

    <RelativeLayout 
        android:id="@+id/btn_two_code"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:onClick="scanning_code"
        android:layout_marginTop="10dp"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_two_code"
            android:layout_centerInParent="true"
            android:textSize="16sp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/code" />
    </RelativeLayout>
    
    <EditText
        android:id="@+id/edit_input_courier"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:hint="@string/str_input_courier_number"
        android:textColor="@color/light_gray"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:background="@drawable/btn_style"
            android:gravity="center"
            android:onClick="btnOk"
            android:text="@string/str_yes"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_cancal"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_style"
            android:gravity="center"
            android:onClick="btnCancal"
            android:text="@string/str_no"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>