<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/login_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="#42a7b9" >

        <Button
            android:id="@+id/btnLoginBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_back"
            android:onClick="btnLoginBack"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/str_login"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <EditText
        android:id="@+id/login_user_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_top_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_editbox"
        android:hint="@string/str_login_hint1"
        android:singleLine="true"
        android:inputType="textPersonName"
        android:textColor="#000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/login_passwd_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_user_edit"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_editbox"
        android:hint="@string/str_passwd"
        android:password="true"
        android:singleLine="true"
        android:textColor="#000"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_passwd_edit"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/forget_passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="5dp"
            android:background="#0000"
            android:visibility="gone"
            android:text="@string/str_forget_passwd"
            android:textColor="@color/bg_tab_main_up_title"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/btn_style"
            android:onClick="btnLogin"
            android:text="@string/str_login"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>