<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/main_title"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/bg_tab_main_up_title"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/btnLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/btn_back" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/str_vmembers_dtails"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btnRight"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/main_title"
        android:layout_marginBottom="55dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/layoutHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp" >

            <ImageView
                android:id="@+id/ivHead"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/ivHead"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvMemberName"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:textColor="#703600" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tvSex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="#703600" />

                    <TextView
                        android:id="@+id/tvAge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="#703600" />

                    <TextView
                        android:id="@+id/tvBirthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="#703600" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/ivLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/icon_vip" />
            </LinearLayout>
        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:background="#f8f8f8" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" >

                    <RelativeLayout
                        android:id="@+id/layoutOrderId"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:padding="10dp" >

                        <TextView
                            android:id="@+id/tvCardIdTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:text="@string/str_vmember_cardid"
                            android:textColor="#CC6600"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tvCardId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="80dp"
                            android:textColor="#006633"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@color/home_tab_bar_divider"
                        android:visibility="gone" />

                    <RelativeLayout
                        android:id="@+id/layoutDistrTime"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:padding="10dp" >

                        <TextView
                            android:id="@+id/tvMemberPhoneNumTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:text="@string/str_vmember_phone"
                            android:textColor="#CC6600"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tvMemberPhoneNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="80dp"
                            android:textColor="#006633"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@color/home_tab_bar_divider"
                        android:visibility="gone" />

                    <RelativeLayout
                        android:id="@+id/layoutFinishTime"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:padding="10dp" >

                        <TextView
                            android:id="@+id/tvJoinTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:text="@string/str_vmember_ask_join"
                            android:textColor="#CC6600"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tvJoin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="80dp"
                            android:textColor="#006633"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@color/home_tab_bar_divider"
                        android:visibility="gone" />

                    <RelativeLayout
                        android:id="@+id/layoutMoney"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:padding="10dp" >

                        <TextView
                            android:id="@+id/tvUsedIntegralTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:text="@string/str_vmember_usedintegral"
                            android:textColor="#CC6600"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tvUsedIntegral"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="80dp"
                            android:textColor="#006633"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@color/home_tab_bar_divider"
                        android:visibility="gone" />

                    <RelativeLayout
                        android:id="@+id/layoutCreatTime"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:padding="10dp" >

                        <TextView
                            android:id="@+id/tvResidueIntegralTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:text="@string/str_vmember_residueintegral"
                            android:textColor="#CC6600"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tvResidueIntegral"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="80dp"
                            android:textColor="#006633"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@color/home_tab_bar_divider"
                        android:visibility="gone" />

                    <RelativeLayout
                        android:id="@+id/layoutPayTime"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:padding="10dp" >

                        <TextView
                            android:id="@+id/tvExplainTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/str_vmember_explain"
                            android:textColor="#CC6600"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tvExplain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="80dp"
                            android:textColor="#006633"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@color/home_tab_bar_divider"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/main_bottom"
        android:background="@color/home_tab_bar_divider"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="5dp" >

        <Button
            android:id="@+id/btnCall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/btn_style"
            android:text="@string/str_vmember_call"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnMsg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:background="@drawable/btn_style"
            android:text="@string/str_vmember_msg"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>